deployment/security/keycloak/keycloak-service.yaml
# Keycloak Service
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: opifex-security
  labels:
    app: keycloak
    component: identity-provider
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: keycloak
